--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "bcrypt": "^5.1.0",
+    "classnames": "^2.3.2",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
