--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
+    "sass": "^1.58.3",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.9.4"
   },
