--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@types/moment-duration-format": "^2.2.3",
     "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
+    "moment-duration-format": "^2.3.2",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
