--- a/package.json
+++ b/package.json
@@ -33,16 +33,19 @@
     "react-dom": "18.2.0",
     "react-google-maps": "^9.4.5",
     "react-hook-geolocation": "^1.1.0",
+    "react-timeago": "^7.1.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-timeago": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.7",
