--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
     "react-hook-geolocation": "^1.1.0",
     "react-timeago": "^7.1.0",
